// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> error renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
  </label>
  <textarea
    aria-describedby="form-0_mock--error"
    id="form-0_mock"
  />
  <span
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<TextArea /> help renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
    <span>
      Help
    </span>
  </label>
  <textarea
    id="form-0_mock"
  />
</div>
`;

exports[`<TextArea /> label renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Label
  </label>
  <textarea
    id="form-0_mock"
  />
</div>
`;

exports[`<TextArea /> renders 1`] = `
<div>
  <label
    for="form-0_mock"
  >
    Example
  </label>
  <textarea
    id="form-0_mock"
  />
</div>
`;
